# docsync

./: CHANGELOG.md  README.md  pyproject.toml
.docsync/: config.json
.github/workflows/: publish.yml
docsync/: cli.py  config.py
docsync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
docsync/diff/: __init__.py  api_diff.py
docsync/generators/: __init__.py  changelog.py  readme_updater.py
docsync/git/: __init__.py  detector.py
docsync/llm/: __init__.py  client.py  prompts.py
docsync/parser/: __init__.py  ast_parser.py  snapshot.py
sample_project/: calc.py
tests/: test_diff.py  test_parser.py
